test/classes/initializers/compilerGenerated/pragmaOnly/parent_inherits_default7.good
parent_inherits_default7.chpl:17: In function 'main':
parent_inherits_default7.chpl:18: error: unresolved call 'Parent.init(Parent, int(64), int(64))'
parent_inherits_default7.chpl:8: note: candidates are: Parent.init(a: int(64), b: int(64))
